--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 Faker==37.0.2
+fuzzywuzzy==0.18.0
 gender-guesser==0.4.0
 Levenshtein==0.27.1
+markdown-it-py==3.0.0
+mdurl==0.1.2
 numpy==2.2.4
 pandas==2.2.3
 prettytable==3.16.0
+Pygments==2.19.1
 python-dateutil==2.9.0.post0
 python-Levenshtein==0.27.1
 pytz==2025.1
 RapidFuzz==3.12.2
+rich==14.0.0
 six==1.17.0
+tabulate==0.9.0
 tzdata==2025.1
 wcwidth==0.2.13
