--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,22 @@
+contourpy==1.3.2
+cycler==0.12.1
 Faker==37.0.2
+fonttools==4.58.0
+-e git+ssh://git@github.com/marginalprog/fuzzy-matching@ced429f451d7b3b5aceebbb728b3fe3dde78f065#egg=fuzzy_matching
 fuzzywuzzy==0.18.0
 gender-guesser==0.4.0
+kiwisolver==1.4.8
 Levenshtein==0.27.1
 markdown-it-py==3.0.0
+matplotlib==3.10.3
 mdurl==0.1.2
 numpy==2.2.4
+packaging==25.0
 pandas==2.2.3
+pillow==11.2.1
 prettytable==3.16.0
 Pygments==2.19.1
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-Levenshtein==0.27.1
 pytz==2025.1
