--- a/.gitignore
+++ b/.gitignore
@@ -63,12 +63,7 @@ htmlcov/
 .hypothesis/
 .pytype/
 
-fuzzy_matching/cli/data/input/test_variant_ru.json
-
-fuzzy_matching/cli/data/input/test_original_ru.json
-
-fuzzy_matching/cli/data/output/consolidated.json
-
-fuzzy_matching/cli/data/output/matches.json
-
-fuzzy_matching/cli/data/output/transliterated_en.json
+fuzzy_matching/cli/data/input/*
+fuzzy_matching/cli/data/output/*
+!fuzzy_matching/cli/data/input/.getkeep
+!fuzzy_matching/cli/data/output/.getkeep
